src/snapshots/glass__parser__tests__todo_expr.snap
---
source: src/parser.rs
expression: "parse_expr_str(\"todo(\\\"not implemented\\\")\")"
---
Spanned {
    node: Todo(
        Some(
            "not implemented",
        ),
    ),
    span: Span {
        start: 0,
        end: 23,
    },
}
