src/snapshots/glass__parser__tests__tuple.snap
---
source: src/parser.rs
expression: "parse_expr_str(\"#(1, 2, 3)\")"
---
Spanned {
    node: Tuple(
        [
            Spanned {
                node: Int(
                    1,
                ),
                span: Span {
                    start: 2,
                    end: 3,
                },
            },
            Spanned {
                node: Int(
                    2,
                ),
                span: Span {
                    start: 5,
                    end: 6,
                },
            },
            Spanned {
                node: Int(
                    3,
                ),
                span: Span {
                    start: 8,
                    end: 9,
                },
            },
        ],
    ),
    span: Span {
        start: 0,
        end: 10,
    },
}
