src/snapshots/glass__parser__tests__x.snap
---
source: src/parser.rs
expression: parse_expr_str(input)
---
Spanned {
    node: Var(
        "x",
    ),
    span: Span {
        start: 0,
        end: 1,
    },
}
